--- a/src/main/resources/templates/showAll/showAllEmployeeWarehouse.html
+++ b/src/main/resources/templates/showAll/showAllEmployeeWarehouse.html
@@ -12,7 +12,7 @@
 <div class="container my-2" align="center">
 
     <h3>Employee List</h3>
-    <a th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <a th:href="@{/employeeWarehouse/addNewEmployeeWarehouse}" class="btn btn-primary btn-sm mb-3" >Add EmployeeWarehouse</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -36,7 +36,9 @@
             <td th:text="${employeeWarehouse.finalDataWorkInClade}"></td>
             <td> <a th:href="@{/warehouse/showEmployeeWarehouseByIdForUpdate/{id}(id=${employeeWarehouse.id})}"
                     class="btn btn-primary"></a>
-                <a th:href="@{/boss/deleteEmployeeWarehouseById/{id}(id=${employee.id})}"
+            <td> <a th:href="@{/employeeWarehouse/showEmployeeWarehouseByIdForUpdate/{id}(id=${employeeWarehouse.id})}"
+                    class="btn btn-primary">Update</a>
+                <a th:href="@{/employeeWarehouse/deleteEmployeeWarehouseById/{id}(id=${employeeWarehouse.id})}"
                    class="btn btn-danger">Delete</a>
             </td>
         </tr>
