--- a/src/main/resources/templates/showAll/showAllProductType.html
+++ b/src/main/resources/templates/showAll/showAllProductType.html
@@ -12,7 +12,7 @@
 <div class="container my-2" align="center">
 
     <h3>Employee List</h3>
-    <a th:href="@{/rubberProducts/addNewRubberProducts}" class="btn btn-primary btn-sm mb-3" >Add RubberProducts</a>
+    <a th:href="@{/productType/addNewProductType}" class="btn btn-primary btn-sm mb-3" >Add Batch</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -20,16 +20,19 @@
             <th>Id</th>
             <th>Название</th>
             <th>Описание</th>
+            <th>Id раздела РТИ</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="rubberProduct:${rubberProducts}">
-            <td th:text="${rubberProduct.id}"></td>
-            <td th:text="${rubberProduct.name}"></td>
-            <td th:text="${rubberProduct.description}"></td>
-            <td> <a th:href="@{/rubberProducts/showRubberProductsByIdForUpdate/{id}(id=${rubberProduct.id})}"
-                    class="btn btn-primary">Update</a>
-                <a th:href="@{/rubberProducts/deleteRubberProductsById/{id}(id=${rubberProduct.id})}"
+        <tr th:each="productType:${productTypes}">
+            <td th:text="${productType.id}"></td>
+            <td th:text="${productType.name}"></td>
+            <td th:text="${productType.description}"></td>
+            <td> <a th:href="@{/rubberProducts/showRubberProductsByIdForUpdate/{id}(id=${productType.rubberProducts.id})}"
+                    class="btn btn-primary" th:text="${productType.rubberProducts.id}"></a>
+            <td> <a th:href="@{/productType/showProductTypeByIdForUpdate/{id}(id=${productType.id})}"
+                    class="btn btn-primary" >Update</a>
+                <a th:href="@{/productType/deleteProductTypeById/{id}(id=${productType.id})}"
                    class="btn btn-danger">Delete</a>
             </td>
         </tr>
