--- a/src/main/resources/templates/showAll/showAllReceipt.html
+++ b/src/main/resources/templates/showAll/showAllReceipt.html
@@ -11,41 +11,26 @@
 <body>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <h3>Кассовый чек List</h3>
+    <a th:href="@{/receipt/addNewReceipt}" class="btn btn-primary btn-sm mb-3" >Add Receipt</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
         <tr>
             <th>Id</th>
-            <th>Фамилия</th>
-            <th>Имя</th>
-            <th>Отчество</th>
-            <th>Должность</th>
-            <th>Дата рождения</th>
-            <th>Адрес</th>
-            <th>Сотовый Телефон</th>
-            <th>Элктронный Адрес</th>
-            <th>Логин</th>
-            <th>Пароль</th>
+            <th>Дата покупки</th>
+            <th>Продавец</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee:${allEmpList}">
-            <td th:text="${employee.id}"></td>
-            <td th:text="${employee.surname}"></td>
-            <td th:text="${employee.name}"></td>
-            <td th:text="${employee.patronymic}"></td>
-            <td th:text="${employee.position}"></td>
-            <td th:text="${employee.dateOfBirth}"></td>
-            <td th:text="${employee.address}"></td>
-            <td th:text="${employee.phoneNumber}"></td>
-            <td th:text="${employee.email}"></td>
-            <td th:text="${employee.login}"></td>
-            <td th:text="${employee.password}"></td>
-            <td> <a th:href="@{/boss/showEmployeeByIdForUpdate/{id}(id=${employee.id})}"
+        <tr th:each="receipt:${receipts}">
+            <td th:text="${receipt.id}"></td>
+            <td th:text="${receipt.timestamp}"></td>
+            <td> <a th:href="@{/boss/showEmployeeByIdForUpdate/{id}(id=${receipt.companyEmployee.id})}"
+                    class="btn btn-primary" th:text="${receipt.companyEmployee.id}"></a>
+            <td> <a th:href="@{/receipt/showReceiptByIdForUpdate/{id}(id=${receipt.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/boss/deleteEmployeeById/{id}(id=${employee.id})}"
+                <a th:href="@{/receipt/deleteReceiptById/{id}(id=${receipt.id})}"
                    class="btn btn-danger">Delete</a>
             </td>
         </tr>
