--- a/src/main/resources/templates/showAll/showAllEmployeeWarehouse.html
+++ b/src/main/resources/templates/showAll/showAllEmployeeWarehouse.html
@@ -2,17 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <div th:replace="fragments/header :: header-css"/>
     <title>Employee</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/employeeWarehouse/addNewEmployeeWarehouse}" class="btn btn-primary btn-sm mb-3" >Add EmployeeWarehouse</a>
+    <h3>Список сотрудников на складе</h3>
+    <a th:href="@{/employeeWarehouse/addNewEmployeeWarehouse}" class="btn btn-primary btn-sm mb-3" >Добавить сотрудника на склад</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -38,12 +36,14 @@
                     class="btn btn-primary"></a>
             <td> <a th:href="@{/employeeWarehouse/showEmployeeWarehouseByIdForUpdate/{id}(id=${employeeWarehouse.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/employeeWarehouse/deleteEmployeeWarehouseById/{id}(id=${employeeWarehouse.id})}"
-                   class="btn btn-danger">Delete</a>
+            <form th:action="@{/employeeWarehouse/deleteEmployeeWarehouseById/{id}(id=${employeeWarehouse.id})}" th:method="delete" >
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
