--- a/src/main/resources/templates/showAll/showAllEmployees.html
+++ b/src/main/resources/templates/showAll/showAllEmployees.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
+    <div th:replace="fragments/header :: header-css"/>
     <title>Employee</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-</head>
+   </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <h3>Список сотрудников</h3>
+    <a sec:authorize="hasAuthority('ADMIN')" th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Добавить сотрудника</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -45,12 +43,16 @@
             <td th:text="${employee.password}"></td>
             <td> <a th:href="@{/boss/showEmployeeByIdForUpdate/{id}(id=${employee.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/boss/deleteEmployeeById/{id}(id=${employee.id})}"
-                   class="btn btn-danger">Delete</a>
+                <div sec:authorize="hasAuthority('ADMIN')">
+                    <form  th:action="@{/boss/deleteEmployeeById/{id}(id=${employee.id})}" th:method="delete" >
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
