--- a/src/main/resources/templates/showAll/showAllProduct.html
+++ b/src/main/resources/templates/showAll/showAllProduct.html
@@ -2,17 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <div th:replace="fragments/header :: header-css"/>
     <title>Employee</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/product/addNewProduct}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <h3>Список товаров</h3>
+    <a th:href="@{/product/addNewProduct}" class="btn btn-primary btn-sm mb-3" >Добавить товар</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -46,12 +44,14 @@
             <td th:text="${product.arrivalDate}"></td>
             <td> <a th:href="@{/product/showProductByIdForUpdate/{id}(id=${product.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/product/deleteProductById/{id}(id=${product.id})}"
-                   class="btn btn-danger">Delete</a>
+                <form th:action="@{/product/deleteProductById/{id}(id=${product.id})}" th:method="delete" >
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
