--- a/src/main/resources/templates/showAll/showAllShelf.html
+++ b/src/main/resources/templates/showAll/showAllShelf.html
@@ -2,55 +2,42 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Employee</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <div th:replace="fragments/header :: header-css"/>
+    <title>Sector</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <h3>Список стеллажей</h3>
+    <a th:href="@{/shelf/addNewShelf}" class="btn btn-primary btn-sm mb-3" >Добавить стеллаж</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
         <tr>
             <th>Id</th>
-            <th>Фамилия</th>
-            <th>Имя</th>
-            <th>Отчество</th>
-            <th>Должность</th>
-            <th>Дата рождения</th>
-            <th>Адрес</th>
-            <th>Сотовый Телефон</th>
-            <th>Элктронный Адрес</th>
-            <th>Логин</th>
-            <th>Пароль</th>
+            <th>Название</th>
+            <th>Описание местоположения</th>
+            <th>Сектор</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee:${allEmpList}">
-            <td th:text="${employee.id}"></td>
-            <td th:text="${employee.surname}"></td>
-            <td th:text="${employee.name}"></td>
-            <td th:text="${employee.patronymic}"></td>
-            <td th:text="${employee.position}"></td>
-            <td th:text="${employee.dateOfBirth}"></td>
-            <td th:text="${employee.address}"></td>
-            <td th:text="${employee.phoneNumber}"></td>
-            <td th:text="${employee.email}"></td>
-            <td th:text="${employee.login}"></td>
-            <td th:text="${employee.password}"></td>
-            <td> <a th:href="@{/boss/showEmployeeByIdForUpdate/{id}(id=${employee.id})}"
+        <tr th:each="shelf:${shelfs}">
+            <td th:text="${shelf.id}"></td>
+            <td th:text="${shelf.name}"></td>
+            <td th:text="${shelf.locationDescription}"></td>
+            <td> <a th:href="@{/shelf/showShelfByIdForUpdate/{id}(id=${shelf.sector.id})}"
+                    class="btn btn-primary" th:text="${shelf.sector.id}"></a>
+            <td> <a th:href="@{/shelf/showShelfByIdForUpdate/{id}(id=${shelf.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/boss/deleteEmployeeById/{id}(id=${employee.id})}"
-                   class="btn btn-danger">Delete</a>
+            <form th:action="@{/shelf/deleteShelfById/{id}(id=${shelf.id})}" th:method="delete" >
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
