--- a/src/main/resources/templates/showAll/showAllSuppliersEmployee.html
+++ b/src/main/resources/templates/showAll/showAllSuppliersEmployee.html
@@ -2,17 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <div th:replace="fragments/header :: header-css"/>
     <title>Employee</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
-    <a th:href="@{/boss/addNewEmployee}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <h3>Список сотрудников поставщика</h3>
+    <a th:href="@{/suppliersEmployee/addNewSuppliersEmployee}" class="btn btn-primary btn-sm mb-3" >Добавить сотрудника поставщика</a>
     <table style="width:100%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
@@ -25,32 +23,33 @@
             <th>Дата рождения</th>
             <th>Адрес</th>
             <th>Сотовый Телефон</th>
-            <th>Элктронный Адрес</th>
-            <th>Логин</th>
-            <th>Пароль</th>
+            <th>Электронный Адрес</th>
+            <th>Id Компании поставщика</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee:${allEmpList}">
-            <td th:text="${employee.id}"></td>
-            <td th:text="${employee.surname}"></td>
-            <td th:text="${employee.name}"></td>
-            <td th:text="${employee.patronymic}"></td>
-            <td th:text="${employee.position}"></td>
-            <td th:text="${employee.dateOfBirth}"></td>
-            <td th:text="${employee.address}"></td>
-            <td th:text="${employee.phoneNumber}"></td>
-            <td th:text="${employee.email}"></td>
-            <td th:text="${employee.login}"></td>
-            <td th:text="${employee.password}"></td>
-            <td> <a th:href="@{/boss/showEmployeeByIdForUpdate/{id}(id=${employee.id})}"
+        <tr th:each="suppliersEmployee:${suppliersEmployees}">
+            <td th:text="${suppliersEmployee.id}"></td>
+            <td th:text="${suppliersEmployee.surname}"></td>
+            <td th:text="${suppliersEmployee.name}"></td>
+            <td th:text="${suppliersEmployee.patronymic}"></td>
+            <td th:text="${suppliersEmployee.position}"></td>
+            <td th:text="${suppliersEmployee.dateOfBirth}"></td>
+            <td th:text="${suppliersEmployee.address}"></td>
+            <td th:text="${suppliersEmployee.phoneNumber}"></td>
+            <td th:text="${suppliersEmployee.email}"></td>
+            <td> <a th:href="@{/supplier/showSupplierByIdForUpdate/{id}(id=${suppliersEmployee.supplier.id})}"
+                    class="btn btn-primary" th:text="${suppliersEmployee.supplier.id}"></a>
+            <td> <a th:href="@{/suppliersEmployee/showSuppliersEmployeeByIdForUpdate/{id}(id=${suppliersEmployee.id})}"
                     class="btn btn-primary">Update</a>
-                <a th:href="@{/boss/deleteEmployeeById/{id}(id=${employee.id})}"
-                   class="btn btn-danger">Delete</a>
+            <form th:action="@{/suppliersEmployee/deleteSuppliersEmployeeById/{id}(id=${suppliersEmployee.id})}" th:method="delete" >
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
