--- a/src/main/resources/templates/updateObject/updateBatch.html
+++ b/src/main/resources/templates/updateObject/updateBatch.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="utf-8">
     <title>Employee Management System</title>
-
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container">
-    <h1>Информация о Batch</h1>
+    <h1>Информация о Партии</h1>
     <hr>
-    <h2>Сохранить Batch</h2>
+    <h2>Сохранить Партию</h2>
 
     <form action="#" th:action="@{/batch/save}" th:object="${batch}" method="POST">
         <input type="hidden" th:field="*{id}" />
-        <input type="text" th:field="*{batchNumber}" placeholder="Номер партии" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{supplier.id}" placeholder="Айди поставщика" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{amount}" placeholder="Количество" class="form-control mb-4 col-4">
-               <button type="submit" class="btn btn-info col-2">Save Batch</button>
+
+        <div class="form-group">
+            <input type="text" th:field="*{batchNumber}" placeholder="Номер партии" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{supplier.id}" placeholder="Айди поставщика" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{amount}" placeholder="Количество" class="form-control input-lg">
+        </div>
+        <button type="submit" class="btn btn-default">Сохранить Партию</button>
     </form>
 
     <hr>
 
-    <a th:href="@{/batch/getAll}"> Back to Batch List</a>
+    <a th:href="@{/batch/getAll}">Обратно к списку партий</a>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
