--- a/src/main/resources/templates/updateObject/updateEmployee.html
+++ b/src/main/resources/templates/updateObject/updateEmployee.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
+    <div th:replace="fragments/header :: header-css"/>
     <title>Employee Management System</title>
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container">
     <h1>Информация о сотрудниках</h1>
     <hr>
     <h2>Сохранить сотрудника</h2>
 
-    <form action="#" th:action="@{/boss/save}" th:object="${employee}" method="POST">
-        <input type="hidden" th:field="*{id}" />
-        <input type="text" th:field="*{surname}" placeholder="Фамилия сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{name}" placeholder="Имя сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{patronymic}" placeholder="Отчество сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{position}" placeholder="Должность сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{dateOfBirth}" placeholder="Дата рождения сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{address}" placeholder="Адрес сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{phoneNumber}" placeholder="Сотовый телефон сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{email}" placeholder="Электронный адрес сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{login}" placeholder="Логин сотрудника" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{password}" placeholder="Пароль сотрудника" class="form-control mb-4 col-4">
-        <button type="submit" class="btn btn-info col-2">Save Employee</button>
+    <form action="#" th:action="@{/boss/save}" th:object="${employee}"
+          method="POST">
+        <input type="hidden" th:field="*{id}"/>
+        <div class="form-group">
+            <input type="text" th:field="*{surname}" placeholder="Фамилия сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{name}" placeholder="Имя сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{patronymic}" placeholder="Отчество сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{position}" placeholder="Должность сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{dateOfBirth}" placeholder="Дата рождения сотрудника"
+                   class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{address}" placeholder="Адрес сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{phoneNumber}" placeholder="Сотовый телефон сотрудника"
+                   class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{email}" placeholder="Электронный адрес сотрудника"
+                   class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{login}" placeholder="Логин сотрудника" class="form-control input-lg">
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{password}" placeholder="Пароль сотрудника" class="form-control input-lg">
+        </div>
+        <div sec:authorize="hasAuthority('ADMIN')" class="form-group">
+            <button type="submit" class="btn btn-default">Save Employee</button>
+        </div>
     </form>
 
     <hr>
 
-    <a th:href="@{/boss/showAllEmployees}"> Back to Employee List</a>
+    <a th:href="@{/boss/getAllEmployees}">Обратно к списку сотрудников</a>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
