--- a/src/main/resources/templates/updateObject/updateEmployeeWarehouse.html
+++ b/src/main/resources/templates/updateObject/updateEmployeeWarehouse.html
@@ -2,30 +2,37 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
+  <div th:replace="fragments/header :: header-css"/>
   <title>Employee Management System</title>
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container">
-  <h1>Информация о EmployeeWarehouse</h1>
+  <h1>Информация о сотрудниках по складам</h1>
   <hr>
-  <h2>Сохранить EmployeeWarehouse</h2>
+  <h2>Сохранить сотрудника по складу</h2>
 
   <form action="#" th:action="@{/employeeWarehouse/save}" th:object="${employeeWarehouse}" method="POST">
     <input type="hidden" th:field="*{id}" />
-    <input type="text" th:field="*{companyEmployee.id}" placeholder="Айди сотрудника" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{warehouse.id}" placeholder="Айди склада" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{initialDataWorkInClade}" placeholder="Начальная дата работы на складе" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{finalDataWorkInClade}" placeholder="Конечная дата работы на складе" class="form-control mb-4 col-4">
-    <button type="submit" class="btn btn-info col-2">Save EmployeeWarehouse</button>
+    <div class="form-group">
+        <input type="text" th:field="*{companyEmployee.id}" placeholder="Айди сотрудника" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{warehouse.id}" placeholder="Айди склада" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{initialDataWorkInClade}" placeholder="Начальная дата работы на складе" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{finalDataWorkInClade}" placeholder="Конечная дата работы на складе" class="form-control input-lg">
+    </div>
+      <button type="submit" class="btn btn-default">Save EmployeeWarehouse</button>
   </form>
 
   <hr>
 
-  <a th:href="@{/employeeWarehouse/showAll}"> Back to Batch List</a>
+  <a th:href="@{/employeeWarehouse/getAll}">Обратно к списку сотрудников по складам</a>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
