--- a/src/main/resources/templates/updateObject/updateReceipt.html
+++ b/src/main/resources/templates/updateObject/updateReceipt.html
@@ -2,28 +2,31 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
+  <div th:replace="fragments/header :: header-css"/>
   <title>Employee Management System</title>
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container">
-  <h1>Информация о Receipt</h1>
+  <h1>Информация о кассовом чеке</h1>
   <hr>
-  <h2>Сохранить Receipt</h2>
+  <h2>Сохранить кассовый чек</h2>
 
   <form action="#" th:action="@{/receipt/save}" th:object="${receipt}" method="POST">
     <input type="hidden" th:field="*{id}" />
-    <input type="text" th:field="*{timestamp}" placeholder="Дата покупки" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{companyEmployee.id}" placeholder="Айди Продавца" class="form-control mb-4 col-4">
-    <button type="submit" class="btn btn-info col-2">Save Receipt</button>
+    <div class="form-group">
+        <input type="text" th:field="*{timestamp}" placeholder="Дата покупки" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{companyEmployee.id}" placeholder="Айди Продавца" class="form-control input-lg">
+    </div>
+    <button type="submit" class="btn btn-default">Сохранить кассовый чек</button>
   </form>
 
   <hr>
 
-  <a th:href="@{/receipt/getAll}"> Back to Receipt List</a>
+  <a th:href="@{/receipt/getAll}">Обратно к списку кассовых чеков</a>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
