--- a/src/main/resources/templates/updateObject/updateReceiptProduct.html
+++ b/src/main/resources/templates/updateObject/updateReceiptProduct.html
@@ -2,29 +2,35 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
+<div th:replace="fragments/header :: header-css"/>
   <title>Employee Management System</title>
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
 <div class="container">
-  <h1>Информация о ReceiptProduct</h1>
+  <h1>Информация о чеку с товарами</h1>
   <hr>
-  <h2>Сохранить ReceiptProduct</h2>
+  <h2>Сохранить чек с товарами</h2>
 
   <form action="#" th:action="@{/receiptProduct/save}" th:object="${receiptProduct}" method="POST">
-    <input type="hidden" th:field="*{id}" />
-    <input type="text" th:field="*{receipt.id}" placeholder="Айди чека" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{product.id}" placeholder="Айди продукта" class="form-control mb-4 col-4">
-    <input type="text" th:field="*{amount}" placeholder="Количество" class="form-control mb-4 col-4">
-    <button type="submit" class="btn btn-info col-2">Save ReceiptProduct</button>
+    <input type="hidden" th:field="*{id}"/>
+    <div class="form-group">
+        <input type="text" th:field="*{receipt.id}" placeholder="Айди чека" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{product.id}" placeholder="Айди продукта" class="form-control input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" th:field="*{amount}" placeholder="Количество" class="form-control input-lg">
+    </div>
+      <button type="submit" class="btn btn-default">Save ReceiptProduct</button>
   </form>
 
   <hr>
 
-  <a th:href="@{/receiptProduct/showAll}"> Back to ReceiptProduct List</a>
+  <a th:href="@{/receiptProduct/getAll}">Обратно к списку чека с товарами</a>
 </div>
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
