--- a/src/main/resources/templates/updateObject/updateProduct.html
+++ b/src/main/resources/templates/updateObject/updateProduct.html
@@ -27,7 +27,7 @@
       <input type="text" th:field="*{shelf.id}" placeholder="Расположение товара" class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="date" th:field="*{batch.id}" placeholder="Id партии товара" class="form-control input-lg">
+      <input type="text" th:field="*{batch.id}" placeholder="Id партии товара" class="form-control input-lg">
     </div>
     <div class="form-group">
       <input type="text" th:field="*{remains}" placeholder="Остаток организации товара" class="form-control input-lg">
