--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -23,7 +23,9 @@
             </span>
 
         <script type="text/javascript"
-                th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+                th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}">
+                        </script>
+        </script>
 
         </footer>
     </div>
