--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -67,12 +67,10 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left">
-                    <div class="form-group" action="#" th:action="@{/shelf/save}">
-                        <input id="productSearch" type="text" class="form-control" placeholder="Поиск товаров по названию">
-                    </div>
-                    <button type="button" onclick="test()" class="btn btn-default">Поиск</button>
-                </form>
+                    <form class="navbar-form navbar-left" th:action="@{../../product/search}" method="get">
+                        <input id="productSearch" name="searchWord" th:value="${searchWord}" type="text" class="form-control" placeholder="Поиск товаров по названию">
+                        <button type="submit" class="btn btn-default">Поиск</button>
+                    </form>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
@@ -80,30 +78,4 @@
 
 <div th:replace="fragments/footer :: footer"/>
 </body>
-<!--<script th:inline="javascript">
-      const url = '/product/';
-
-      function test() {
-            fetch(url + 'searchProduct/' + document.getElementById("productSearch").value, {
-                method: 'GET',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                })
-                     .then(response => {
-                         if (response.ok) {
-                             response.json().then(function (data) {
-                              document.cookie = "Bearer " + data.accessToken;
-                              console.log(data);
-                              console.log(data.accessToken);
-                              let showAllProduct ='../product/showAllProduct';
-                              window.location.replace(showAllProduct);
-                          })
-                         }
-                        if (response.status === 400){
-                            alert("Incorrect data");
-                        }
-                    });
-        }
-</script>-->
 </html>
