--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,8 +49,6 @@
 
 </div>
 
-
-
 <div th:replace="fragments/footer :: footer"/>
 </body>
 <script th:inline="javascript">
@@ -75,7 +73,7 @@
                           })
                          }
                         if (response.status === 500){
-                            alert("Incorrect data");
+                            window.history.pushState( null , null, '?error' );
                         }
                     });
         }
