--- a/src/main/resources/templates/updateObject/updateBatch.html
+++ b/src/main/resources/templates/updateObject/updateBatch.html
@@ -13,16 +13,15 @@
     <h2>Сохранить Партию</h2>
 
     <form action="#" th:action="@{/batch/save}" th:object="${batch}" method="POST">
-        <input type="hidden" th:field="*{id}" />
-
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
-            <input type="text" th:field="*{batchNumber}" placeholder="Номер партии" class="form-control input-lg">
+            <input type="text" th:field="*{batchNumber}" placeholder="Номер партии" required class="form-control input-lg">
         </div>
         <div class="form-group">
-            <input type="text" th:field="*{supplier.id}" placeholder="Айди поставщика" class="form-control input-lg">
+            <input type="text" th:field="*{supplier.id}" placeholder="Айди поставщика" required class="form-control input-lg">
         </div>
         <div class="form-group">
-            <input type="text" th:field="*{amount}" placeholder="Количество" class="form-control input-lg">
+            <input type="text" th:field="*{amount}" placeholder="Количество" required class="form-control input-lg">
         </div>
         <button type="submit" class="btn btn-default">Сохранить Партию</button>
     </form>
