--- a/src/main/resources/templates/updateObject/updateProductType.html
+++ b/src/main/resources/templates/updateObject/updateProductType.html
@@ -12,16 +12,16 @@
   <hr>
   <h2>Сохранить Типе товара</h2>
 
-  <form action="#" th:action="@{/productType/save}" th:object="${productType}" method="POST">
+  <form action="#" th:action="@{/productType/save}" th:object="${productType}" required method="POST">
     <input type="hidden" th:field="*{id}" />
     <div class="form-group">
-      <input type="text" th:field="*{name}" placeholder="Название" class="form-control input-lg">
+      <input type="text" th:field="*{name}" placeholder="Название" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{description}" placeholder="Описание" class="form-control input-lg">
+      <input type="text" th:field="*{description}" placeholder="Описание" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{rubberProducts.id}" placeholder="Id раздела РТИ" class="form-control input-lg">
+      <input type="text" th:field="*{rubberProducts.id}" placeholder="Id раздела РТИ" required class="form-control input-lg">
     </div>
       <button type="submit" class="btn btn-default">Сохранить Тип товара</button>
   </form>
