--- a/src/main/resources/templates/updateObject/updateRubberProducts.html
+++ b/src/main/resources/templates/updateObject/updateRubberProducts.html
@@ -15,10 +15,10 @@
   <form action="#" th:action="@{/rubberProducts/save}" th:object="${rubberProducts}" method="POST">
     <input type="hidden" th:field="*{id}" />
     <div class="form-group">
-      <input type="text" th:field="*{name}" placeholder="Название" class="form-control input-lg">
+      <input type="text" th:field="*{name}" placeholder="Название" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{description}" placeholder="Описание" class="form-control input-lg">
+      <input type="text" th:field="*{description}" placeholder="Описание" required class="form-control input-lg">
     </div>
     <button type="submit" class="btn btn-default">Сохранить Раздел РТИ</button>
   </form>
