--- a/src/main/resources/templates/updateObject/updateSector.html
+++ b/src/main/resources/templates/updateObject/updateSector.html
@@ -15,13 +15,13 @@
   <form action="#" th:action="@{/sector/save}" th:object="${sector}" method="POST">
     <input type="hidden" th:field="*{id}" />
     <div class="form-group">
-        <input type="text" th:field="*{name}" placeholder="Название" class="form-control input-lg">
+        <input type="text" th:field="*{name}" placeholder="Название" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{locationDescription}" placeholder="Описание местоположения" class="form-control input-lg">
+      <input type="text" th:field="*{locationDescription}" placeholder="Описание местоположения" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{warehouse.id}" placeholder="Айди Склада" class="form-control input-lg">
+      <input type="text" th:field="*{warehouse.id}" placeholder="Айди Склада" required class="form-control input-lg">
     </div>
       <button type="submit" class="btn btn-default">Сохранить Сектор</button>
   </form>
