--- a/src/main/resources/templates/updateObject/updateShelf.html
+++ b/src/main/resources/templates/updateObject/updateShelf.html
@@ -15,13 +15,13 @@
   <form action="#" th:action="@{/shelf/save}" th:object="${shelf}" method="POST">
     <input type="hidden" th:field="*{id}" />
     <div class="form-group">
-      <input type="text" th:field="*{name}" placeholder="Название" class="form-control input-lg">
+      <input type="text" th:field="*{name}" placeholder="Название" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{locationDescription}" placeholder="Описание местоположения" class="form-control input-lg">
+      <input type="text" th:field="*{locationDescription}" placeholder="Описание местоположения" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{sector.id}" placeholder="Айди Сектора" class="form-control input-lg">
+      <input type="text" th:field="*{sector.id}" placeholder="Айди Сектора" required class="form-control input-lg">
     </div>
     <button type="submit" class="btn btn-default">Сохранить Стеллаж</button>
   </form>
