--- a/src/main/resources/templates/updateObject/updateSuppliersEmployee.html
+++ b/src/main/resources/templates/updateObject/updateSuppliersEmployee.html
@@ -16,31 +16,31 @@
   <form action="#" th:action="@{/suppliersEmployee/save}" th:object="${suppliersEmployee}" method="POST">
     <input type="hidden" th:field="*{id}" />
     <div class="form-group">
-      <input type="text" th:field="*{surname}" placeholder="Фамилия" class="form-control input-lg">
+      <input type="text" th:field="*{surname}" placeholder="Фамилия" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{name}" placeholder="Имя" class="form-control input-lg">
+      <input type="text" th:field="*{name}" placeholder="Имя" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{patronymic}" placeholder="Отчество" class="form-control input-lg">
+      <input type="text" th:field="*{patronymic}" placeholder="Отчество" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{position}" placeholder="Должность" class="form-control input-lg">
+      <input type="text" th:field="*{position}" placeholder="Должность" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{dateOfBirth}" placeholder="Дата рождения" class="form-control input-lg">
+      <input type="text" th:field="*{dateOfBirth}" placeholder="Дата рождения" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{address}" placeholder="Адрес" class="form-control input-lg">
+      <input type="text" th:field="*{address}" placeholder="Адрес" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{phoneNumber}" placeholder="Сотовый телефон" class="form-control input-lg">
+      <input type="text" th:field="*{phoneNumber}" placeholder="Сотовый телефон" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{email}" placeholder="Электронный адрес" class="form-control input-lg">
+      <input type="text" th:field="*{email}" placeholder="Электронный адрес" required class="form-control input-lg">
     </div>
     <div class="form-group">
-      <input type="text" th:field="*{supplier.id}" placeholder="Айди компания поставщика" class="form-control input-lg">
+      <input type="text" th:field="*{supplier.id}" placeholder="Айди компания поставщика" required class="form-control input-lg">
     </div>
       <button type="submit" class="btn btn-default">Сохранить Сотрудника поставщика</button>
   </form>
